--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ h2 {
 button {
     text-align: center;
     padding: 10px;
-    background: yellow;
+    background: gold;
     margin: 20px;
 }
 
